Name:           monadLib
Version:        3.10
License:        BSD3
License-file:   LICENSE
Author:         Iavor S. Diatchki
Maintainer:     diatchki@galois.com
Homepage:       http://wiki.github.com/yav/monadlib
Category:       Monads
Synopsis:       A collection of monad transformers.
Description:    A collection of monad transformers.
Build-type:     Simple
Cabal-version: >= 1.2
Extra-source-files:
  LICENSE,
  README,
  CHANGES

Library
  hs-source-dirs: src
  Exposed-modules:
    MonadLib,
    MonadLib.Monads,
    MonadLib.Derive

  Build-depends: base >= 4 && < 5

  GHC-options:    -O2 -Wall


