cabal-version:  3.0
Name:           monadLib
Version:        3.10.3
License:        ISC
License-file:   LICENSE
Author:         Iavor S. Diatchki
Maintainer:     diatchki@galois.com
Homepage:       https://github.com/yav/monadlib
Category:       Monads
Synopsis:       A collection of monad transformers.
Description:    A collection of monad transformers.
Build-type:     Simple
Extra-source-files:
  LICENSE,
  README,
  CHANGES


Library
  default-language: Haskell2010
  hs-source-dirs: src
  Exposed-modules:
    MonadLib,
    MonadLib.Monads,
    MonadLib.Derive

  Build-depends: base >= 4.9 && < 5

  GHC-options:    -O2 -Wall


